<resources>
    <string name="app_name">Workflow S!</string>
    <string name="app_brand">WORKFLOW S!</string>
    <string name="app_description_login">Simplicity made powerful</string>

    <!--button title-->
    <string name="login_button">Login with Google</string>
    <string name="button_template">template</string>
    <string name="button_checklist">checklist</string>
    <string name="button_activity">task</string>


    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--toolbar title-->
    <string name="activity_name">Activity</string>

    <!--flag for recycler view-->
    <string name="checklist_home_rv">CHECKLIST_RECYCLER</string>
    <string name="task_home_rv">TASK_RECYCLER</string>

    <!--login type-->
    <string name="google">GOOGLE</string>
    <string name="login_role_user">USER</string>
    <string name="pref_userId">memberList</string>
    <string name="pref_username">userName</string>
    <string name="pref_email">email</string>
    <string name="pref_avatar">avatar</string>
    <string name="pref_token">userToken</string>
    <string name="pref_orgId">orgId</string>
    <string name="pref_orgName">orgName</string>
    <string name="order">order</string>
    <string name="notify">notify</string>


    <!--content response type-->
    <string name="image_type">img</string>
    <string name="text_type">text</string>
    <string name="description_task_demo">Student Registration Process is engineered to assist in welcoming a new student to an educational establishment and integrate them into the required systems and the community.</string>
    <string name="run_checklist">run checklist</string>
    <string name="data_na_message">NOTHING TO SHOW</string>
    <string name="no_data_checklist_message">Your in-progress checklist will appear here.</string>
    <string name="no_data_task_message">Your task that will be due today will appear here.</string>
    <string name="no_data_comment_message">Your comment will appear here.</string>
    <string name="no_data_task_message_2">Your tasks will appear here.</string>
    <string name="no_data_activities_message">Your task activities will appear here.</string>

    <!--task status value-->
    <string name="task_done">Done</string>
    <string name="task_running">Running</string>
    <string name="task_unavailable">Unavailable</string>

    <!--checklist status value-->
    <string name="checklist_done">Done</string>
    <string name="checklist_running">Checklist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="item_action_rename">rename</string>
    <string name="item_action_skip">skip</string>
    <string name="item_action_reactivate">reactivate</string>



</resources>
