<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/HeaderBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="parallax"
        android:gravity="center_vertical">
    </androidx.appcompat.widget.Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Three main dashboard button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btn_template"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/template_icon"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/button_template"
                    android:drawablePadding="8dp"/>

                <Button
                    android:id="@+id/btn_checklist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/checklist_icon"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/button_checklist"
                    android:drawablePadding="8dp"/>

                <Button
                    android:id="@+id/btn_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/activity_icon"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/button_activity"
                    android:drawablePadding="8dp"/>
            </LinearLayout>

            <!--Checklist progress section-->
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--title-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Checklist progress"
                        android:textSize="25sp"
                        android:fontFamily="@font/avenir_black"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="view all"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/avenir_light"
                        android:background="@drawable/button_radius_dark"
                        android:textAllCaps="false"
                        android:layout_marginRight="20dp"/>

                </LinearLayout>
                <!--the list below => RecyclerView-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_checklist_progress"
                        android:scrollbars="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                    </androidx.recyclerview.widget.RecyclerView>
                </RelativeLayout>
            </LinearLayout>

            <!--today's task section-->
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--title-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Today's task"
                        android:textSize="25sp"
                        android:fontFamily="@font/avenir_black"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="view all"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/avenir_light"
                        android:background="@drawable/button_radius_dark"
                        android:textAllCaps="false"
                        android:layout_marginRight="20dp"/>

                </LinearLayout>
                <!--the list below => RecyclerView-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_today_task"
                        android:scrollbars="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>






</LinearLayout>