<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <!--Three main dashboard button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btn_template"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/template_icon"
                android:layout_marginRight="8dp"
                android:text="@string/button_template"
                android:drawablePadding="8dp"
                android:textSize="14dp"/>

            <Button
                android:id="@+id/btn_checklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/checklist_icon"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/button_checklist"
                android:drawablePadding="8dp"
                android:textSize="14dp"/>

            <Button
                android:id="@+id/btn_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/activity_icon"
                android:layout_marginLeft="8dp"
                android:text="@string/button_activity"
                android:drawablePadding="8dp"
                android:textSize="14dp"/>
        </LinearLayout>

        <!--Checklist progress section-->
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--title-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="My checklists"
                    android:textSize="20sp"
                    android:fontFamily="@font/avenir_black"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bt_view_all_checklist"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="view all"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:fontFamily="@font/avenir_light"
                    android:background="@drawable/button_radius_dark"
                    android:textAllCaps="false"
                    android:layout_marginRight="20dp"/>

            </LinearLayout>

            <!--the list below => RecyclerView-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/checklist_shimmer_view_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    shimmer:duration="800">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/placeholder_checklist_data"/>
                        <include layout="@layout/placeholder_checklist_data"/>
                        <include layout="@layout/placeholder_checklist_data"/>

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>
                <LinearLayout
                    android:id="@+id/checklist_data_notfound_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/not_found_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data_na_message"
                        android:gravity="center"
                        android:layout_marginVertical="18dp"
                        android:fontFamily="@font/avenir_black"
                        android:textSize="18sp"/>
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_checklist_progress"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:nestedScrollingEnabled="false">

                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </LinearLayout>

        <!--today's task section-->
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--title-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Activities"
                    android:textSize="20sp"
                    android:fontFamily="@font/avenir_black"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bt_view_all_task"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="view all"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:fontFamily="@font/avenir_light"
                    android:background="@drawable/button_radius_dark"
                    android:textAllCaps="false"
                    android:layout_marginRight="20dp"/>

            </LinearLayout>
            <!--the list below => RecyclerView-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/task_shimmer_view_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    shimmer:duration="800">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/placeholder_checklist_data"/>
                        <include layout="@layout/placeholder_checklist_data"/>
                        <include layout="@layout/placeholder_checklist_data"/>

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <LinearLayout
                    android:id="@+id/task_data_notfound_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/not_found_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data_na_message"
                        android:gravity="center"
                        android:layout_marginVertical="18dp"
                        android:fontFamily="@font/avenir_black"
                        android:textSize="18sp"/>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_today_task"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>


